<resources>
    <string name="app_name">Restaurants List</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_restaurant_info">RestaurantInfoActivity</string>
    <string name="title_activity_inspection_detail">InspectionDetail</string>
    <string name="str_no_inspections">There are currently no inspections for this restaurant.</string>
    <string name="str_no_violation">"There were no violations \nfound for this inspection."</string>
    <string name="str_insp_inspection">INSPECTIONS</string>
    <string name="str_insp_information">Information</string>
    <string name="str_violation_violations">Violations</string>
    <string name="str_violation_test_date_level">May 18, 2018 | HIGH</string>
    <string name="str_violation_issue_header"># Non-critical Issues:  \n# Critical Issues:</string>
    <string name="str_violation_inspection_details">INSPECTION DETAILS</string>
    <string name="str_violation_inspection_type">Inspection Type:</string>
    <string name="str_violation_followup">Follow-Up</string>
    <string name="str_violation_test_noncrit">3</string>
    <string name="str_violation_test_crit">5</string>
    <string name="str_info_information">Information</string>
    <string name="str_info_inspections">INSPECTIONS</string>
    <string name="string_insp_layout_issue_labels"># Non-critical Issues: \n# Critical Issues:</string>
    <string name="str_insp_layout_test_noncrit">8</string>
    <string name="str_insp_layout_test_crit">8</string>
    <string name="str_insp_layout_date">Date HERE</string>
    <string name="str_rest_layout_restaurant_name">RESTAURANT  NAME</string>
    <string name="str_rest_layout_date">Date HERE</string>
    <string name="str_rest_layout_num_issues">10</string>
    <string name="str_rest_layout_issues">Issues</string>
    <string name="str_viol_layout_short_descrip">Short Violation Description Here</string>
    <string name="str_coordinates">%1$.8f, %2$.7f</string>
    <string name="str_num_issues">%1$d</string>
    <string name="str_date_level">%1$s | %2$s</string>
    <string name="str_map_snippet">\nAddress: %1$s \n\nHazard Level: %2$s \n</string>
    <string name="title_restaurant_map">Restaurants Map</string>
    <string name="str_updating_data">Updating Data…</string>
    <string name="str_map">MAP</string>
    <string name="str_restaurants">RESTAURANTS</string>
    <string name="str_update_available">Update Available</string>
    <string name="str_proceed">Proceed</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_image_download">Image Download</string>
    <string name="str_map_refreshing">Map Is Now Refreshing</string>
    <string name="str_download_canceled">Download From Server Canceled</string>
    <string name="str_location_turned_off">Location Permissions Turned Off.</string>
    <string name="str_unable_get_rest_location">Unable to get restaurant location</string>
    <string name="str_unable_get_current_location">Unable to get current location</string>
    <string name="str_101">"101,Operations,Not Critical,Plans/construction/alterations not in accordance with the Regulation [s. 3; s. 4],Operation does not follow regulations,Not Repeat</string>
    <string name="str_102">"102,Operations,Not Critical,Operation of an unapproved food premises [s. 6(1)],Unapproved food premises,Not Repeat"</string>
    <string name="str_103">"103,Operations,Not Critical,Failure to hold a valid permit while operating a food service establishment [s. 8(1)],No valid food permit,Not Repeat"</string>
    <string name="str_104">"104,Operations,Not Critical,Permit not posted in a conspicuous location [s. 8(7)],Permit not properly displayed,Not Repeat"</string>
    <string name="str_201">"201,Food,Critical,Food contaminated or unfit for human consumption [s. 13],Contaminated food,Not Repeat"</string>
    <string name="str_202">"202,Food,Critical,Food not processed in a manner that makes it safe to eat [s. 14(1)],Food not properly processed,Not Repeat"</string>
    <string name="str_203">"203,Food,Critical,Food not cooled in an acceptable manner [s. 12(a)],Food not properly cooled,Not Repeat"</string>
    <string name="str_204">"204,Food,Critical,Food not cooked or reheated in a manner that makes it safe to eat [s. 14(1)],Food not properly cooked/reheated,Not Repeat"</string>
    <string name="str_205">"205,Food,Critical,Cold potentially hazardous food stored/displayed above 4 °C. [s. 14(2)],Hazardous storage of cold food,Not Repeat"</string>
    <string name="str_206">"206,Food,Critical,Hot potentially hazardous food stored/displayed below 60 °C. [s. 14(2)],Hazardous storage of hot food,Not Repeat"</string>
    <string name="str_208">"208,Food,Not Critical,Foods obtained from unapproved sources [s. 11],Food from unapproved sources,Not Repeat"</string>
    <string name="str_209">"209,Food,Not Critical,Food not protected from contamination [s. 12(a)],Poor food contamination protection,Not Repeat"</string>
    <string name="str_210">"210,Food,Not Critical,Food not thawed in an acceptable manner [s. 14(2)],Food not properly thawed,Not Repeat"</string>
    <string name="str_211">"211,Food,Not Critical,Frozen potentially hazardous food stored/displayed above -18 °C. [s. 14(3)],Hazardous storage of frozen food,Not Repeat"</string>
    <string name="str_212">"212,Food,Not Critical,Operator has not provided acceptable written food handling procedures [s. 23],No written food handling procedures,Not Repeat"</string>
    <string name="str_301">"301,Equipment,Critical,Equipment/utensils/food contact surfaces not maintained in sanitary condition [s. 17(1)],Unsanitary equipment,Not Repeat"</string>
    <string name="str_302">"302,Equipment,Critical,Equipment/utensils/food contact surfaces not properly washed and sanitized [s. 17(2)],Poorly washed equipment,Not Repeat"</string>
    <string name="str_303">"303,Equipment,Critical,Equipment/facilities/hot and cold water for sanitary maintenance not adequate [s. 17(3); s. 4(1)(f)],Inadequate water maintenance,Not Repeat"</string>
    <string name="str_304">"304,Pests,Not Critical,Premises not free of pests [s. 26(a)],Pests,Not Repeat"</string>
    <string name="str_305">"305,Pests,Not Critical,Conditions observed that may allow entrance/harbouring/breeding of pests [s. 26(b)(c)],Allowed breeding of pests,Not Repeat"</string>
    <string name="str_306">"306,Operations,Not Critical,Food premises not maintained in a sanitary condition [s. 17(1)],Unsanitary food premises,Not Repeat"</string>
    <string name="str_307">"307,Equipment,Not Critical,Equipment/utensils/food contact surfaces are not of suitable design/material [s. 16; s. 19],Unsuitable equipment,Not Repeat"</string>
    <string name="str_308">"308,Equipment,Not Critical,Equipment/utensils/food contact surfaces are not in good working order [s. 16(b)],Dysfunctional equipment,Not Repeat"</string>
    <string name="str_309">"309,Equipment,Not Critical,Chemicals cleansers and similar agents stored or labeled improperly [s. 27],Improper materials labelling,Not Repeat"</string>
    <string name="str_310">"310,Equipment,Not Critical,Single use containers and utensils are used more than once [s. 20],Repeat use of single-use utensils,Not Repeat"</string>
    <string name="str_311">"311,Operations,Not Critical,Premises not maintained as per approved plans [s. 6(1)(b)],Premises not maintained,Not Repeat"</string>
    <string name="str_312">"312,Operations,Not Critical,Items not required for food premises operation being stored on the premises [s. 18],Inaccessibility of required items,Not Repeat"</string>
    <string name="str_313">"313,Operations,Not Critical,Live animal on the premises excluding guide animal in approved areas [s. 25(1)],Live animal on premises,Not Repeat"</string>
    <string name="str_314">"314,Operations,Not Critical,Operator has not provided acceptable written sanitation procedures [s. 24],No written sanitation procedures,Not Repeat"</string>
    <string name="str_315">"315,Equipment,Not Critical,Refrigeration units and hot holding equipment lack accurate thermometers [s. 19(2)],Lack of accurate thermometers,Not Repeat"</string>
    <string name="str_401">"401,Employees,Critical,Adequate handwashing stations not available for employees [s. 21(4)],Inadequate handwashing stations,Not Repeat"</string>
    <string name="str_402">"402,Employees,Critical,Employee does not wash hands properly or at adequate frequency [s. 21(3)],Inadequate employee hand washing,Not Repeat"</string>
    <string name="str_403">"403,Employees,Not Critical,Employee lacks good personal hygiene clean clothing and hair control [s. 21(1)],Inadequate employee personal hygiene,Not Repeat"</string>
    <string name="str_404">"404,Employees,Not Critical,Employee smoking in food preparation/processing/storage areas [s. 21(2)],Employee smoking,Not Repeat"</string>
    <string name="str_501">"501,Operations,Not Critical,Operator does not have FOODSAFE Level 1 or Equivalent [s. 10(1)],No FOODSAFE Level 1,Not Repeat"</string>
    <string name="str_502">"502,Employees,Not Critical,In operator’s absence no staff on duty has FOODSAFE Level 1 or equivalent [s. 10(2)],No staff with FOODSAFE Level 1,Not Repeat"</string>
    <string name="str_high">HIGH</string>
    <string name="str_moderate">MODERATE</string>
    <string name="str_low">LOW</string>
    <string name="str_none">NONE</string>
    <string name="str_days_ago">" days ago"</string>
    <string name="str_follow_up">Follow Up</string>
    <string name="str_routine">Routine</string>
    <string name="str_no_recent_insp">No Recent Inspection</string>
    <string name="str_less_than">&lt;=</string>
    <string name="str_greater_than">&gt;=</string>
    <string name="str_search_text">Search Text &#8230;</string>
    <string name="str_hazard_level_most_recent">Hazard Level of Most Recent Inspection:</string>
    <string name="str_num_critical_last_year">Number of Critical Violations in Last Year:</string>
    <string name="str_only_include_fave">Only Include ‘Favourite’ Restaurants:</string>
    <string name="str_search_num_crit"># Critical Violations</string>
    <string name="str_search_title">Search</string>
    <string name="str_search_high">High</string>
    <string name="str_search_mod">Moderate</string>
    <string name="str_search_low">Low</string>
    <string name="str_search_reset">Reset</string>
    <string name="str_new_inspections_title">New Inspections</string>
    <string name="str_ok">OK</string>
</resources>