<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailLabels"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RestaurantViolationActivity">

    <ImageView
        android:id="@+id/violation_background"
        android:layout_width="359dp"
        android:layout_height="248dp"
        android:src="@drawable/box_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/inspection_overview"
        android:layout_width="433dp"
        android:layout_height="179dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235"
        app:srcCompat="@drawable/inspection_det_high"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv3"
        android:layout_width="358dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/violation_header"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/violation_header"
        android:layout_width="360dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspection_overview"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/violation_header"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/violations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_violation_violations"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rv3"
        app:layout_constraintEnd_toEndOf="@+id/violation_header"
        app:layout_constraintStart_toStartOf="@+id/violation_header"
        app:layout_constraintTop_toTopOf="@+id/violation_header"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/date_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/str_violation_test_date_level"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/inspection_overview"
        app:layout_constraintEnd_toEndOf="@+id/inspection_overview"
        app:layout_constraintStart_toStartOf="@+id/inspection_overview"
        app:layout_constraintTop_toTopOf="@+id/inspection_overview"
        app:layout_constraintVertical_bias="0.198" />

    <TextView
        android:id="@+id/inspection_issues_labels"
        android:layout_width="146dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:lineSpacingExtra="7sp"
        android:text="@string/str_violation_issue_header"
        android:textColor="@color/fontColour"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/inspection_overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/inspection_header"
        android:layout_width="360dp"
        android:layout_height="59dp"
        android:background="@drawable/button_box"
        android:gravity="center"
        android:text="@string/str_violation_inspection_details"
        android:textColor="@color/fontColour"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_violation_inspection_type"
        android:textColor="@color/fontColour"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/inspection_overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_level"
        app:layout_constraintVertical_bias="0.209" />

    <TextView
        android:id="@+id/inspection_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_violation_followup"
        android:textColor="@color/fontColour"
        app:layout_constraintBottom_toBottomOf="@+id/inspection_overview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/date_level"
        app:layout_constraintVertical_bias="0.209" />

    <TextView
        android:id="@+id/num_noncrit_issues_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_violation_test_noncrit"
        android:textColor="@color/fontColour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/num_crit_issues_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_violation_test_crit"
        android:textColor="@color/fontColour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_noncrit_issues_details"
        app:layout_constraintVertical_bias="0.012" />

    <TextView
        android:id="@+id/no_violations_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:lineSpacingExtra="5sp"
        android:textColor="@color/fontColour"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/violation_background" />

</androidx.constraintlayout.widget.ConstraintLayout>